# role-distributor-operator

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  charmcraft.yaml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  integration.yaml  promote.yaml  release.yaml
docs/agents/: AGENTS.md
docs/agents/plans/: cross-model-integration-tests.md  role-distributor-charm.md  spec-update-machine-id-workload-params.md
docs/agents/specs/: cross-model-integration-tests-design.md  role-assignment-interface-design.md  role-distributor-charm-design.md
lib/charms/role_distributor/v0/: role_assignment.py
src/: charm.py  role_distributor.py
tests/integration/: conftest.py  test_charm.py  test_cross_model.py
tests/integration/charms/dummy-requirer/: .gitignore  charmcraft.yaml  pyproject.toml
tests/integration/charms/dummy-requirer/src/: charm.py
tests/unit/: test_charm.py  test_data_classes.py  test_provider.py  test_requirer.py  test_role_distributor.py
